--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -14,7 +14,7 @@ section{
 }
 
 .section-1 {
-	background: rgba(153, 0, 0, 1); 
+	background: rgb(77, 2, 2); 
 	text-shadow: 2px 2px 5px black;
 }
 
