--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -19,7 +19,10 @@ section{
 }
 
 .section-2 {
-	background-color: rgba(255, 81, 0, 0.452);
+	border-radius: 2%;
+	margin-top: 5em;
+	text-shadow: 2px 2px 5px black;
+	background-color: rgba(206, 136, 79, 0.397);
 }
 
 .section-3 {
